--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.288.0",
-    "next": "13.5.6",
+    "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^1.14.0",
