Co-authored-by: Bryden Calaway <BrydenIsNotSmart@users.noreply.github.com> Co-authored-by: ForGetFulSkyBro <forgetfulskybro@users.noreply.github.com> Co-authored-by: ShadowLp174 <shadowlp174@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-context-menu": "^2.1.5",
@@ -26,7 +28,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-markdown": "^9.0.0",
     "react-timeago": "^7.2.0",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
