Co-authored-by: ForGetFulSkyBro <forgetfulskybro@users.noreply.github.com> Co-authored-by: Chase <palentier.business@gmail.com> Co-authored-by: Bryden Calaway <BrydenIsNotSmart@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-markdown": "^9.0.0",
     "react-timeago": "^7.2.0",
     "remark-gfm": "^4.0.0",
+    "sass": "^1.69.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
