--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "color-thief-ts": "^1.1.1",
+    "isomorphic-ws": "^5.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.288.0",
     "next": "^14.0.1",
