Co-authored-by: ForGetFulSkyBro <forgetfulskybro@users.noreply.github.com> Co-authored-by: Bryden Calaway <BrydenIsNotSmart@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.48.2",
     "react-markdown": "^9.0.0",
     "react-timeago": "^7.2.0",
+    "react-twemoji": "^0.5.0",
     "remark-gfm": "^4.0.0",
     "sass": "^1.69.5",
     "tailwind-merge": "^1.14.0",
@@ -43,6 +44,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-timeago": "^4.1.6",
+    "@types/react-twemoji": "^0.4.3",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
