--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "color-thief-ts": "^1.1.1",
+    "dompurify": "^3.0.6",
     "isomorphic-ws": "^5.0.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.288.0",
@@ -39,6 +40,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/js-cookie": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
